fix: Fix missing background images
This relates to a recent version change to `css-loader` which caused
the images to no longer be created with the expected filenames or
in the correct directory.

The latest version of css-loader now uses Webpack 5's asset modules,
whilst our configuration was using the legacy Webpack 4 method of
`file-loader`.

This fix updates the configuration to use the new method whilst keeping
the existing directory and filename structure.

--- a/common/assets/scss/components/_icons.scss
+++ b/common/assets/scss/components/_icons.scss
@@ -6,6 +6,7 @@ $_icon-height: 20px;
   vertical-align: middle;
   background-repeat: no-repeat;
   background-size: $_icon-width $_icon-height;
+  background-position: left center;
   padding-left: $_icon-width + govuk-spacing(2);
   min-height: $_icon-height;
 }
